# rover_workspace

./: .gitignore  README.md  bang_waypoint_follower_explained.txt  bang_waypoint_follower_how_to_use.txt  calibrate_wheelbase.py  frames_2026-04-13_17.16.26.gv  gps_to_rviz.py  ins_rviz2.rviz  localizer_setup.txt  log_waypoints.py  log_waypoints_odom.py  my_waypoints.yaml  ntrip_proxy.py  plot_imu_live.py  plot_ins_full.py  plot_ins_live.py  record_imu_drift.py  rover_odom.rviz  spin_360.py  test_log_waypoints.py  test_logged_waypoints.yaml  waypoint_follower_explained.txt  waypoint_follower_how_to_use.txt  waypoint_system_explanation.txt  waypoints.yaml  waypoints_1m_return.yaml  waypoints_2m_square.yaml  waypoints_3m_return.yaml  waypoints_filtered.yaml  waypoints_from_bag.yaml  waypoints_latest.yaml  waypoints_odm_route.yaml  waypoints_slalom.yaml  waypoints_test.yaml  xy_positions.txt
src/: extract_waypoints.py  waypoint_follower.py  waypoints.yaml
src/inertial_sense_ros2_V2/: CMakeLists.txt  ROS1_TO_ROS2_MIGRATION.txt  package.xml
src/inertial_sense_ros2_V2/include/inertial_sense_ros2_v2/: inertial_sense_node.h
src/inertial_sense_ros2_V2/launch/: imu_raw.launch.py  inertial_sense.launch.py  inertial_sense_config.launch.py  inertial_sense_rtk.launch.py
src/inertial_sense_ros2_V2/msg/: GNSSEphemeris.msg  GNSSObsVec.msg  GNSSObservation.msg  GPS.msg  GPSInfo.msg  GTime.msg  GlonassEphemeris.msg  INL2States.msg  PreIntIMU.msg  RTKInfo.msg  RTKRel.msg  SatInfo.msg
src/inertial_sense_ros2_V2/src/: inertial_sense_node.cpp
src/inertial_sense_ros2_V2/srv/: FirmwareUpdate.srv  RefLLAUpdate.srv
src/move_5_feet/: package.xml  setup.cfg  setup.py
src/move_5_feet/move_5_feet/: move_5_feet.py
src/move_forward/: package.xml  setup.py
src/move_forward/move_forward/: move_forward.py
src/waypoint_reader/: package.xml  setup.cfg  setup.py
src/waypoint_reader/config/: default_params.yaml  gazebo_waypoints.yaml
src/waypoint_reader/launch/: rviz.launch.py  waypoint_follower.launch.py
src/waypoint_reader/waypoint_reader/: __init__.py  bang_waypoint_follower.py  extract_waypoints.py  gps_datum_odom.py  gps_to_navsat.py  imu_enu_republisher.py  imu_odometry.py  ins_localizer.py  ned_to_enu.py  odom_to_path.py  pose_monitor.py  simple_gps_odom.py  simple_waypoint_follower.py  waypoint_follower.py  yaw_bias_corrector.py
