<?xml version="1.0"?>
<package format="3">
  <name>move_forward</name>
  <version>0.0.0</version>
  <description>Move rover forward using cmd_vel</description>

  <maintainer email="lance@example.com">Lance</maintainer>
  <license>Apache License 2.0</license>

  <!-- THIS IS THE IMPORTANT PART -->
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

